# waveviewplayer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  LogoIcon.xpm  README.md  ideas.txt
include/: constants.h  custombutton.h  decoder.h  fileDropTarget.h  helpframe.h  jrpopupmenu.h  jrwaveviewplayer.h  jrwvpmainwin.h  listitem.h  mediaWrap.h  metaPanel.h  scrollingWidget.h  sessionmanager.h
src/: custombutton.cpp  decoder.cpp  fileDropTarget.cpp  helpframe.cpp  jrpopupmenu.cpp  jrwaveviewplayer.cpp  jrwvpmainwin.cpp  listitem.cpp  mediaWrap.cpp  metaPanel.cpp  scrollingWidget.cpp  sessionmanager.cpp
